<resources>
    <string name="app_name">TrueFeeling</string>
    <string name="prompt_account">Account</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_account">This account is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_ref_login">Sign in</string>
    <string name="finger1_name">大拇指</string>
    <string name="finger2_name">食指</string>
    <string name="finger3_name">中指</string>
    <string name="finger4_name">无名指</string>
    <string name="finger5_name">小指</string>
    <string name="prompt_email">Email</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_test_main">TestMainActivity</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="main_activity_title">True Feeling</string>
    <string name="tab_connection">Connection</string>
    <string name="tab_status">Status</string>
    <string name="tab_profile">Profile</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="title_activity_mi_band">MiBandActivity</string>
    <string name="not_found">MiBand not found. Is it in range?</string>
    <string name="title_activity_mi_overview">MiOverviewActivity</string>
    <string name="looking_for_miband">Looking for MiBand</string>
    <string name="title_activity_mi_le_params">MiLeParamsActivity</string>
    <string name="device_list_emptry">No devices scanned</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_restricted_profile_text">Accessing accounts from a restricted profile is not supported.</string>
    <string name="common_google_play_services_restricted_profile_title">Restricted Profile</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="place_autocomplete_clear_button">Clear search</string>
    <string name="place_autocomplete_search_hint">Search</string>
    <string name="action_exit">Sign out</string>
    <string name="action_settings">Settings</string>
    <string name="add_family_member">Add family members to follow their weight info</string>
    <string name="add_than_last_time">Added %1$s since last weigh-in</string>
    <string name="agree">Agree</string>
    <string name="agree_ux">Enroll in User Experience Program</string>
    <string name="alert_msg_unable_start_camera">"Allow Camera usage if you restricted it.
If you didn't, restart the phone."</string>
    <string name="alert_title_unable_start_camera">"Can't access Camera"</string>
    <string name="am">AM</string>
    <string name="ampm_format">hh:mm a</string>
    <string name="ampm_format_hhmmss">hh:mm:ss a</string>
    <string name="apk_download_ok">Downloaded Mi Fit successfully</string>
    <string name="apk_uptodate">Current version is up to date</string>
    <string name="baby_no_weight">No weigh-in history</string>
    <string name="baby_weight">"Baby's weight"</string>
    <string name="baby_weight_adult_weight_content">Hold your baby after the scale detects your own weight</string>
    <string name="baby_weight_adult_weight_title">Weigh in without the baby first</string>
    <string name="baby_weight_baby_weight_content">"Baby's weight will be calculated automatically"</string>
    <string name="baby_weight_baby_weight_title">Hold your baby and step on the scale</string>
    <string name="baby_weight_scale_not_nearby_content">You should use the scale to weigh in</string>
    <string name="baby_weight_too_small_weight">Difference between 2 weigh-ins is</string>
    <string name="baby_weight_warning_content">Make sure the scale, the floor, and your feet are dry</string>
    <string name="bin_weixin_device_not_connect">Connect Mi Band to add WeChat</string>
    <string name="bind_google_fit">Google Fit</string>
    <string name="bind_google_fit_tip">Add to sync activity, and sleep info with Google Fit</string>
    <string name="bind_mi_weight_howto_tips">Learn more</string>
    <string name="bind_qq">QQ</string>
    <string name="bind_qq_health">Add</string>
    <string name="bind_qq_health_tip">Add to sync activity, sleep, and weight info with QQ Health</string>
    <string name="bind_qq_health_tip_another_qq">Sign in to QQ and check your progress in QQ Health Center.</string>
    <string name="bind_qq_health_title">Compete with friends from QQ</string>
    <string name="bind_weibo">Sina Weibo</string>
    <string name="bind_weibo_health">Sync with Weibo Sport</string>
    <string name="bind_weibo_health_tip">Add to sync activity info with Weibo Fit</string>
    <string name="bind_weibo_health_title">Compete with friends from Weibo</string>
    <string name="bind_weixin_failed">微信接入失败</string>
    <string name="bind_weixin_new_disable_tips">"Follow Mi Fit i=on WeChat
to view steps and share them in Moments"</string>
    <string name="bind_weixin_new_now">Adding WeChat……</string>
    <string name="bind_weixin_new_tips">"点击“接入”启动微信后,进入小米手环账号页面,
然后点击“绑定设备”按钮即可完成接入。

接入后,步数将会同步至微信排行榜中。"</string>
    <string name="bind_weixin_now">Creating QR code……</string>
    <string name="bind_weixin_tips_1">Tap «Create QR code» to save it to Gallery</string>
    <string name="bind_weixin_tips_2">Scan the QR code from the Gallery with WeChat</string>
    <string name="bind_weixin_title">Have fun with your WeChat friends</string>
    <string name="birthday">Date of birth</string>
    <string name="blue">Blue</string>
    <string name="body">Neck</string>
    <string name="bracelet_login_info">Sign in with Mi Account to receive helpful hints and analyze your activities.</string>
    <string name="bracelet_login_info_2">"By using this product, you are agreeing with Xiaomi's
"</string>
    <string name="bracelet_login_title">"Let's get started!"</string>
    <string name="bracelet_notify_text">Dont forget to put the band on</string>
    <string name="bracelet_notify_title">Battery charged</string>
    <string name="bracelet_store_desc">Mi Store</string>
    <string name="bt_operation_failed_tips">Bluetooth is not working properly. Wait a minute or two and try again.</string>
    <string name="button_search_friend">Search</string>
    <string name="button_send_care">Nudge</string>
    <string name="buy_bracelet_desc">Start with buying a band</string>
    <string name="cancel">Cancel</string>
    <string name="checking_new_apk">Checking…</string>
    <string name="clear_weight_goal">Delete goal</string>
    <string name="close_hr_check">Heart rate mode has been turned off</string>
    <string name="cm">cm</string>
    <string name="complete">Done</string>
    <string name="confirm">OK</string>
    <string name="connecting">Connecting band…</string>
    <string name="content_too_short">"Can't be blank"</string>
    <string name="data_loading">Just a sec…</string>
    <string name="date_from_to">%1$s to %2$s</string>
    <string name="date_from_to_short">%1$s-%2$s</string>
    <string name="date_last_month">Last month</string>
    <string name="date_last_week">Last week</string>
    <string name="date_month">MMMM</string>
    <string name="date_month_day">MMM d</string>
    <string name="date_month_day_short">%1$d/%2$d</string>
    <string name="date_month_day_week">%1$s %2$s</string>
    <string name="date_month_day_week_short">%1$d.%2$d %3$s</string>
    <string name="date_this_month">This month</string>
    <string name="date_this_week">This week</string>
    <string name="date_today">Today</string>
    <string name="date_year_month">MMM yyyy</string>
    <string name="date_year_month_day">MMM d, yyyy</string>
    <string name="date_yesterday">Yesterday</string>
    <string name="signout">Sign out</string>
    <string name="bind_mili_quit">Not now</string>
    <string name="bind_mili_search_tips">Keep the device close to your phone</string>
    <string name="bind_mili_search_title">Searching for device…</string>
    <string name="mine_goal_setting">"   Set goal"</string>
</resources>