<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:avatarview="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/personinfo_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@id/person_info_header_layout"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/person_info_head_height"
        android:background="@color/personinfo_bg">

        <RelativeLayout
            android:id="@id/person_info_avatar_rl"
            android:layout_width="@dimen/person_avatar_size"
            android:layout_height="@dimen/person_avatar_size"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/person_avatar_margin_top">

            <com.liangfeizc.avatarview.AvatarView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/avatar_selector"
                avatarview:border_color="@android:color/white"
                avatarview:border_width="10dp"
                avatarview:shadow_color="@android:color/holo_red_dark"
                avatarview:shadow_width="10dp" />

            <!--ImageView
                android:layout_width="@dimen/person_info_camera"
                android:layout_height="@dimen/person_info_camera"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:src="@drawable/person_info_camera" /-->

        </RelativeLayout>


        <TextView
            android:id="@id/person_info_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/person_info_avatar_rl"
            android:layout_centerInParent="true"
            android:layout_marginTop="10.0dip"
            android:textColor="@color/black"
            android:textSize="16.0sp" />

    </RelativeLayout>

    <!--View
        android:layout_width="fill_parent"
        android:layout_height="1.0px"
        android:layout_marginLeft="@dimen/person_info_item_margin"
        android:layout_marginRight="@dimen/person_info_item_margin"
        android:background="@color/black_20_percent" /-->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="7.0dip"
            android:layout_marginTop="@dimen/mine_margin"
            android:gravity="left"
            android:text="@string/mine_goal_setting"
            android:textColor="@color/black_40_percent"
            android:textSize="11.299988sp" />

        <!--include layout="@layout/home_divider" /-->
        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:layout_marginLeft="@dimen/person_info_item_margin"
            android:layout_marginRight="@dimen/person_info_item_margin"
            android:background="@color/black_20_percent" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparency"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/person_info_item_height"
            android:layout_marginLeft="@dimen/person_info_item_margin"
            android:layout_marginRight="@dimen/person_info_item_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@id/finger_info_item_key_f1"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/finger1_name"
                android:textColor="@color/personinfo_item_key_text_color"
                android:textSize="@dimen/person_info_item_text_size" />

            <ImageView
                android:id="@id/finger_info_item_img_f1"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/person_info_item_img_height"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/setting_arrow_default" />

            <TextView
                android:id="@id/finger_info_item_value_f1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/finger_info_item_img_f1"
                android:layout_toStartOf="@id/finger_info_item_img_f1"
                android:gravity="center"
                android:text="value"
                android:textColor="@color/personinfo_item_value_text_color"
                android:textSize="@dimen/person_info_item_value_text_size" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:layout_marginLeft="@dimen/person_info_item_margin"
            android:layout_marginRight="@dimen/person_info_item_margin"
            android:background="@color/black_20_percent" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/person_info_item_height"
            android:layout_marginLeft="@dimen/person_info_item_margin"
            android:layout_marginRight="@dimen/person_info_item_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@id/finger_info_item_key_f2"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/finger2_name"
                android:textColor="@color/personinfo_item_key_text_color"
                android:textSize="@dimen/person_info_item_text_size" />

            <ImageView
                android:id="@id/finger_info_item_img_f2"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/person_info_item_img_height"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/setting_arrow_default" />

            <TextView
                android:id="@id/finger_info_item_value_f2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/finger_info_item_img_f2"
                android:layout_toStartOf="@id/finger_info_item_img_f2"
                android:gravity="center"
                android:text="value"
                android:textColor="@color/personinfo_item_value_text_color"
                android:textSize="@dimen/person_info_item_value_text_size" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:layout_marginLeft="@dimen/person_info_item_margin"
            android:layout_marginRight="@dimen/person_info_item_margin"
            android:background="@color/black_20_percent" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/person_info_item_height"
            android:layout_marginLeft="@dimen/person_info_item_margin"
            android:layout_marginRight="@dimen/person_info_item_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@id/finger_info_item_key_f3"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/finger3_name"
                android:textColor="@color/personinfo_item_key_text_color"
                android:textSize="@dimen/person_info_item_text_size" />

            <ImageView
                android:id="@id/finger_info_item_img_f3"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/person_info_item_img_height"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/setting_arrow_default" />

            <TextView
                android:id="@id/finger_info_item_value_f3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/finger_info_item_img_f3"
                android:layout_toStartOf="@id/finger_info_item_img_f3"
                android:gravity="center"
                android:text="value"
                android:textColor="@color/personinfo_item_value_text_color"
                android:textSize="@dimen/person_info_item_value_text_size" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:layout_marginLeft="@dimen/person_info_item_margin"
            android:layout_marginRight="@dimen/person_info_item_margin"
            android:background="@color/black_20_percent" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/person_info_item_height"
            android:layout_marginLeft="@dimen/person_info_item_margin"
            android:layout_marginRight="@dimen/person_info_item_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@id/finger_info_item_key_f4"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/finger4_name"
                android:textColor="@color/personinfo_item_key_text_color"
                android:textSize="@dimen/person_info_item_text_size" />

            <ImageView
                android:id="@id/finger_info_item_img_f4"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/person_info_item_img_height"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/setting_arrow_default" />

            <TextView
                android:id="@id/finger_info_item_value_f4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/finger_info_item_img_f4"
                android:layout_toStartOf="@id/finger_info_item_img_f4"
                android:gravity="center"
                android:text="value"
                android:textColor="@color/personinfo_item_value_text_color"
                android:textSize="@dimen/person_info_item_value_text_size" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:layout_marginLeft="@dimen/person_info_item_margin"
            android:layout_marginRight="@dimen/person_info_item_margin"
            android:background="@color/black_20_percent" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/person_info_item_height"
            android:layout_marginLeft="@dimen/person_info_item_margin"
            android:layout_marginRight="@dimen/person_info_item_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@id/finger_info_item_key_f5"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/finger5_name"
                android:textColor="@color/personinfo_item_key_text_color"
                android:textSize="@dimen/person_info_item_text_size" />

            <ImageView
                android:id="@id/finger_info_item_img_f5"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/person_info_item_img_height"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/setting_arrow_default" />

            <TextView
                android:id="@id/finger_info_item_value_f5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/finger_info_item_img_f5"
                android:layout_toStartOf="@id/finger_info_item_img_f5"
                android:gravity="center"
                android:text="value"
                android:textColor="@color/personinfo_item_value_text_color"
                android:textSize="@dimen/person_info_item_value_text_size" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:layout_marginLeft="@dimen/person_info_item_margin"
            android:layout_marginRight="@dimen/person_info_item_margin"
            android:background="@color/black_20_percent" />

        <TextView
            android:id="@id/sign_out"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/signout"
            android:textColor="@color/personinfo_item_key_text_color"
            android:textSize="@dimen/person_info_item_text_size" />
    </LinearLayout>


    <!--ListView
        android:id="@id/person_info_list"
        android:scrollbars="none"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:divider="@color/transparency"
        android:dividerHeight="0.0dip" /-->
</LinearLayout>